--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,3 +1,17 @@
+@use './variables' as *;
+
 @mixin primary-padding {
     padding: 0 1rem;
+}
+
+@mixin tablet {
+    @media (min-width: $tablet-width) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: $desktop-width) {
+        @content;
+    }
 }
