--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,6 +5,6 @@ $primary-background: #fff; //white
 $divider: #e1e1e1; //mercury
 $alternative-light: #fafafa; // alabaster
 
-$secondary-background: #f7f7f7; //light gray
-$secondary-text: #909090; //gray
-$card-background: #fff; //
+// Resolution
+$tablet-width: 768px;
+$desktop-width: 1280px;
