--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -2,8 +2,8 @@
 $header-footer-background: #323232; //BandSite-Black
 $highlight: #Afafaf; // Silver
 $primary-background: #fff; //white
-$divider: #e1e1e1; //mercury
-$alternative-light: #fafafa; // alabaster
+$text-on-dark: #e1e1e1; //mercury
+$gallery-background: #fafafa; // alabaster
 
 // Resolution
 $tablet-width: 768px;
