--- a/styles/partials/_photo.scss
+++ b/styles/partials/_photo.scss
@@ -10,6 +10,10 @@
         justify-content: space-between;
     }
 
+    @include desktop {
+        @include desktop-padding;
+    }
+
     &__photo {
         max-width: 100%;
         padding: 0.313rem 0;
