--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -8,6 +8,7 @@
 }
 
 a {
+    color: inherit;
     text-decoration: none;
 }
 
@@ -19,6 +20,10 @@ h2, h3 {
     background-color: $header-footer-background;
     display: flex;
     flex-direction: column;
+    &:hover {
+        background-color: purple;
+        transition: 2s;
+    }
 
     @include tablet {
         flex-direction: row;
@@ -29,16 +34,17 @@ h2, h3 {
         width: 9rem;
         display: flex;
         align-self: center;
-        padding: 1rem 0;
+        padding: 0.5rem 0;
 
         @include tablet {
+            padding: 0;
             margin: 1rem 1rem 1rem 2.25rem;
         }
 
         @include desktop {
-            padding-left: 4rem;
+            width: 8rem;
+            padding-left: 2rem;
         }
-
     }
 
     &__list {
@@ -53,7 +59,7 @@ h2, h3 {
 
         @include desktop {
             font-size: 0.6rem;
-            padding-left: 1rem;
+            padding-left: 6rem;
         }
     }
 
@@ -94,7 +100,7 @@ h2, h3 {
 
             @include desktop {
                 font-weight: 400;
-                padding-bottom: 2rem;
+                padding-bottom: 2.1rem;
                 letter-spacing: 0.05rem;
             }
         }
@@ -166,7 +172,7 @@ h2, h3 {
         }
 
         @include desktop {
-            font-size: 0.7rem;
+            font-size: 0.875rem;
         }
 
         &-container {
@@ -180,7 +186,7 @@ h2, h3 {
             }
 
             @include desktop {
-                width: 52%;
+                width: 60%;
                 line-height: 110%;
                 font-weight: 400;
             }
@@ -237,7 +243,7 @@ h2, h3 {
             }
 
             @include desktop {
-                font-size: 0.7rem;
+                font-size: 0.875rem;
             }
         }
     }
