--- a/styles/partials/_photo.scss
+++ b/styles/partials/_photo.scss
@@ -17,8 +17,14 @@
     &__photo {
         max-width: 100%;
         padding: 0.313rem 0;
+        filter: grayscale(1);
+        &:hover {
+            filter: grayscale(0);
+            transition: 2s;
+          }
 
         @include tablet {
+            padding: 1rem 0;
             width: 31%;
         }
     }
