added styling yo dynamic comment, added better structure for shows page

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -118,10 +118,12 @@ h2, h3 {
     @include tablet {
         padding: 0;
         @include tablet-padding;
+        margin-top: 2rem;
     }
 
     @include desktop {
         @include desktop-padding;
+        margin-top: 2rem;
     }
 
     &__top {
