--- a/styles/shows.css
+++ b/styles/shows.css
@@ -134,11 +134,13 @@ h2, h3 {
   .site-footer {
     padding: 0;
     padding: 3rem 2.25rem 2.25rem 2.25rem;
+    margin-top: 2rem;
   }
 }
 @media (min-width: 1280px) {
   .site-footer {
     padding: 3rem 6rem 2.25rem 6rem;
+    margin-top: 2rem;
   }
 }
 @media (min-width: 768px) {
@@ -349,18 +351,14 @@ h2, h3 {
   font-size: 0.8rem;
   padding: 2rem 8rem 1rem 0;
 }
-@media (min-width: 768px) {
-  .main-content__wrapper {
-    flex-direction: column;
-  }
-}
-.main-content__concerts {
+.main-content__concert-card {
   width: 100%;
   border-bottom: 0.15rem solid #e1e1e1;
-  margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 @media (min-width: 768px) {
-  .main-content__concerts {
+  .main-content__concert-card {
     display: flex;
     align-items: center;
   }
@@ -382,7 +380,8 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .main-content__date {
-    padding-right: 4rem;
+    padding: 0;
+    flex: 1;
   }
 }
 .main-content__venue {
@@ -390,14 +389,23 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .main-content__venue {
-    padding-right: 4rem;
+    padding: 0;
+    flex: 1;
   }
 }
 .main-content__location {
   padding-left: 1rem;
 }
+@media (min-width: 768px) {
+  .main-content__location {
+    padding: 0;
+    flex: 1;
+  }
+}
 .main-content__button {
   display: flex;
+  justify-content: center;
+  align-items: center;
   text-transform: uppercase;
   background-color: #323232;
   color: #fff;
@@ -405,6 +413,11 @@ h2, h3 {
   font-size: 1.3rem;
   border-radius: 0.2rem;
   border: 0;
-  padding: 0.8rem 5rem 0.8rem 5rem;
-  margin: 1rem 1rem 1rem 1rem;
+  height: 3rem;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .main-content__button {
+    width: 12rem;
+  }
 }/*# sourceMappingURL=shows.css.map */
