--- a/styles/shows.css
+++ b/styles/shows.css
@@ -129,6 +129,7 @@ h2, h3 {
   background-color: #323232;
   color: #e1e1e1;
   position: relative;
+  margin-top: 1rem;
 }
 @media (min-width: 768px) {
   .site-footer {
@@ -281,6 +282,11 @@ h2, h3 {
   align-items: flex-start;
   position: relative;
 }
+@media (min-width: 1280px) {
+  .hero-banner {
+    height: 35rem;
+  }
+}
 .hero-banner::before {
   content: "";
   position: absolute;
@@ -300,6 +306,21 @@ h2, h3 {
   color: #fff;
   z-index: 10;
 }
+@media (min-width: 768px) {
+  .hero-banner__subtitle {
+    padding: 4rem 0 0 2.25rem;
+    font-weight: 600;
+    font-size: 1.7rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero-banner__subtitle {
+    padding: 9rem 0 0 6rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    justify-content: center;
+  }
+}
 .hero-banner__title {
   font-weight: 600;
   padding-left: 1rem;
@@ -310,15 +331,19 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .hero-banner__title {
+    width: 80%;
     font-size: 4rem;
     font-weight: 600;
-    padding: 3rem 2.25rem 2.25rem 2.25rem;
+    padding: 1rem 0 2.25rem 2.25rem;
   }
 }
 @media (min-width: 1280px) {
   .hero-banner__title {
-    padding: 3rem 6rem 2.25rem 6rem;
+    padding: 1rem 0 0 6rem;
     font-size: 3rem;
+    width: 50%;
+    justify-content: center;
+    align-items: normal;
   }
 }
 .hero-banner__song {
@@ -327,13 +352,49 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .hero-banner__song {
-    width: 60%;
+    padding-left: 2.25rem;
+    margin-bottom: 3rem;
+    width: 70%;
+    height: 13rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero-banner__song {
+    width: 35%;
+    position: absolute;
+    right: 5rem;
+    top: 10rem;
+    height: 11rem;
   }
 }
 
+@media (min-width: 1280px) {
+  .main-content {
+    display: flex;
+    flex-direction: row;
+  }
+}
 .main-content__title {
   padding: 2.2rem 0 1.1rem 1rem;
   font-size: 1.9rem;
+}
+@media (min-width: 768px) {
+  .main-content__title {
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
+    font-size: 2.8rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__title {
+    font-size: 2rem;
+    padding: 3rem 5rem 0 6rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__concerts-box {
+    width: 70%;
+    padding: 4rem 0 0 6rem;
+  }
 }
 .main-content__concerts-tablet {
   display: none;
@@ -342,32 +403,42 @@ h2, h3 {
   .main-content__concerts-tablet {
     display: flex;
     flex-direction: row;
-    padding-left: 1rem;
   }
 }
 .main-content__concerts-tablet--subtitle {
   text-transform: uppercase;
   color: #Afafaf;
   font-size: 0.8rem;
-  padding: 2rem 8rem 1rem 0;
+  padding: 0 0 1rem 2.25rem;
+  flex: 0.212;
+}
+@media (min-width: 1280px) {
+  .main-content__concerts-tablet--subtitle-venue {
+    margin: 0 7rem 0 1.2rem;
+  }
 }
 .main-content__concert-card {
   width: 100%;
   border-bottom: 0.15rem solid #e1e1e1;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem 1rem 1rem 1rem;
 }
 @media (min-width: 768px) {
   .main-content__concert-card {
+    padding: 1rem 2rem 1rem 1.25rem;
+    margin: 0 1rem 0 1rem;
     display: flex;
     align-items: center;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__concert-card {
+    padding-right: 1rem;
   }
 }
 .main-content__subtitle {
   text-transform: uppercase;
   color: #Afafaf;
   font-size: 0.8rem;
-  padding: 1rem 1rem;
 }
 @media (min-width: 768px) {
   .main-content__subtitle {
@@ -376,7 +447,7 @@ h2, h3 {
 }
 .main-content__date {
   font-weight: 600;
-  padding-left: 1rem;
+  padding: 0.8rem 0;
 }
 @media (min-width: 768px) {
   .main-content__date {
@@ -385,7 +456,7 @@ h2, h3 {
   }
 }
 .main-content__venue {
-  padding-left: 1rem;
+  padding: 0.8rem 0;
 }
 @media (min-width: 768px) {
   .main-content__venue {
@@ -394,7 +465,7 @@ h2, h3 {
   }
 }
 .main-content__location {
-  padding-left: 1rem;
+  padding: 0.8rem 0;
 }
 @media (min-width: 768px) {
   .main-content__location {
