--- a/styles/shows.css
+++ b/styles/shows.css
@@ -430,6 +430,9 @@ h2, h3 {
 .main-content__concert-card:hover {
   background-color: #fafafa;
 }
+.main-content__concert-card:focus {
+  background-color: #e1e1e1;
+}
 @media (min-width: 768px) {
   .main-content__concert-card {
     display: flex;
