--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -7,6 +7,10 @@
     font-family: Avenir, Arial, Helvetica, sans-serif;
 }
 
+ul {
+    list-style: none;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -37,8 +41,8 @@ h2, h3 {
         padding: 0.5rem 0;
 
         @include tablet {
+            margin: 1rem 2rem 1rem 1.3rem;
             padding: 0;
-            margin: 1rem 1rem 1rem 2.25rem;
         }
 
         @include desktop {
@@ -53,13 +57,12 @@ h2, h3 {
         display: flex;
         text-align: center;
 
-        @include tablet {
-            padding-left: 4rem;
-        }
+        // @include tablet {
+        // }
 
         @include desktop {
             font-size: 0.6rem;
-            padding-left: 6rem;
+            margin-left: 3rem;
         }
     }
 
@@ -67,11 +70,11 @@ h2, h3 {
         width: 50%;
 
         @include tablet {
-            padding-left: 3rem;
+            margin: 0 1rem 0 2rem;
         }
 
         @include desktop {
-            padding-left: 2rem;
+            margin: 0 1rem 0 1rem;
         }
 
         &--highlight {
@@ -111,14 +114,17 @@ h2, h3 {
     background-color: $header-footer-background;
     color: $text-on-dark;
     position: relative;
+    margin-top: 1rem;
 
     @include tablet {
         padding: 0;
         @include tablet-padding;
+        margin-top: 2rem;
     }
 
     @include desktop {
         @include desktop-padding;
+        margin-top: 2rem;
     }
 
     &__top {
