--- a/styles/shows.css
+++ b/styles/shows.css
@@ -368,6 +368,9 @@ h2, h3 {
   }
 }
 
+.main-content {
+  position: relative;
+}
 @media (min-width: 1280px) {
   .main-content {
     display: flex;
@@ -398,7 +401,7 @@ h2, h3 {
 @media (min-width: 1280px) {
   .main-content__concerts-box {
     width: 70%;
-    padding: 4rem 0 0 6rem;
+    padding: 6rem 0 0 6rem;
   }
 }
 .main-content__concerts-tablet {
@@ -408,18 +411,40 @@ h2, h3 {
   .main-content__concerts-tablet {
     display: flex;
     flex-direction: row;
+    padding: 0 0 1rem 2.4rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__concerts-tablet {
+    position: absolute;
+    top: 4rem;
+    left: 21.4rem;
   }
 }
 .main-content__concerts-tablet--subtitle {
   text-transform: uppercase;
   color: #Afafaf;
   font-size: 0.8rem;
-  padding: 0 0 1rem 1rem;
   flex: 0.22;
+}
+@media (min-width: 768px) {
+  .main-content__concerts-tablet--subtitle-venue {
+    padding-left: 0.3rem;
+  }
 }
 @media (min-width: 1280px) {
   .main-content__concerts-tablet--subtitle-venue {
-    margin: 0 7rem 0 1.2rem;
+    margin-left: 9.8rem;
+  }
+}
+@media (min-width: 768px) {
+  .main-content__concerts-tablet--subtitle-location {
+    padding-left: 0.7rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__concerts-tablet--subtitle-location {
+    margin-left: 8.8rem;
   }
 }
 .main-content__concert-card {
