--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -104,6 +104,8 @@
 
 .main-content {
 
+    position: relative;
+
     @include desktop {
         display:flex;
         flex-direction: row;
@@ -130,32 +132,53 @@
             padding: 0 1.5rem;
         }
 
-        
         @include desktop {
             width: 70%;
-            padding: 4rem 0 0 6rem;
+            padding: 6rem 0 0 6rem;
         }
     }
 
-    &__concerts-tablet {
+    &__concerts-tablet { //hidden subtitles, appears on tablet and desktop only
         display: none;
 
         @include tablet{
             display: flex;
             flex-direction: row;
+            padding: 0 0 1rem 2.4rem;
+        }
+
+        @include desktop {
+            position: absolute;
+            top: 4rem;
+            left: 21.4rem;
         }
 
         &--subtitle {
             text-transform: uppercase;
             color: $highlight;
             font-size: 0.8rem;
-            padding: 0 0 1rem 1rem;
             flex: 0.22;
         }
 
         &--subtitle-venue {
+
+            @include tablet{
+                padding-left: 0.3rem;
+            }
+
             @include desktop {
-                margin: 0 7rem 0 1.2rem;
+                margin-left: 9.8rem;
+            }
+        }
+
+        &--subtitle-location {
+
+            @include tablet{
+                padding-left: 0.7rem;
+            }
+
+            @include desktop {
+                margin-left: 8.8rem;
             }
         }
     }
@@ -182,7 +205,7 @@
         }
     }
 
-    &__subtitle { //hidden subtitles, appears on mobile only
+    &__subtitle { 
         text-transform: uppercase;
         color: $highlight;
         font-size: 0.8rem;
